# debt_split_qt

./: .gitignore  CMakeLists.txt  CalculadoraPresenter.cpp  CalculadoraPresenter.h  README.md  main.cpp  mainwindow.ui
Model/: CMakeLists.txt
ModelsLib/: CMakeLists.txt
ModelsLib/Models/: Participante.cpp  Participante.h  Produto.cpp  Produto.h
PresentationLib/: CMakeLists.txt
PresentationLib/Interfaces/: ICalculadoraView.h  ICalculadoraViewSubscriber.h
PresentationLib/Presenter/: CalculadoraPresenter.cpp  CalculadoraPresenter.h
PresentationLib/View/: CalculadoraView.cpp  CalculadoraView.h  MainWindow.cpp  MainWindow.h  ProductDialog.cpp  ProductDialog.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  productDialog.ui  widget.ui
PresentationLib/Wrapper/: CalculadoraWrapper.cpp  CalculadoraWrapper.h
ServicesLib/: CMakeLists.txt
ServicesLib/Services/: DividaService.cpp  DividaService.h  ParticipanteService.cpp  ParticipanteService.h  ProdutoService.cpp  ProdutoService.h
ServicesLib/Utils/: InputValidator.h
View/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
